--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="keyhunt.css">
-		<title>another lost soul has come here</title>
+		<link rel="stylesheet" href="basic.css">
+		<title>another lost soulihoerpijbePbfjpof</title>
 	</head>
 
 	<meta content="Key Hunt Guide (v1.2)" property="og:title" />
