--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -3,25 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="basic.css">
-		<title>another lost soulihoerpijbePbfjpof</title>
+		<title>PeepoQuest</title>
+		<link rel="icon" type="image/x-icon" href="assets/SweetCandy.png">
 	</head>
 
-	<meta content="Key Hunt Guide (v1.2)" property="og:title" />
-	<meta content="another lost soul has come here" property="og:description" />
-	<meta content="https://westcraft15.github.io/keyhunt/keyhunt" property="og:url" />
-	<meta content="https://westcraft15.github.io/keyhunt/assets/Purouy.png" property="og:image" />
-	<meta content="#D8A030" data-react-helmet="true" name="theme-color" />
-
-	<script>
-		const head = document.getElementsByTagName("head")[0];
-		const names = ["Grouy", "Greouy", "Bluouy", "Reouy", "Purouy", "Blaouy", "Lenny", "Gouy", "Piouy", "Oraouy"]
-
-		const favicon = document.createElement("link")
-		favicon.setAttribute("rel", "icon")
-		favicon.setAttribute("type", "image/x-icon")
-		favicon.setAttribute("href", "assets/" + names[Math.floor(Math.random() * names.length)] + ".png")
-		head.appendChild(favicon)
-	</script>
+	<meta content="Home" property="og:title" />
+	<meta content="mmm.. yom yummy! candy!" property="og:description" />
+	<meta content="https://loglogpeepo.github.io/peepoquest/home" property="og:url" />
+	<meta content="https://loglogpeepo.github.io/peepoquest/assets/SweetCandy.png" property="og:image" />
+	<meta content="#FF4444" data-react-helmet="true" name="theme-color" /
 
 	<body style="text-align: center;">
 		<ul class="navBar">
