page update and a bit of formatting

--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -15,25 +15,28 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="javascript:void(0)" class="current">Landing page</a></li>
-			<li><a href="guide">Keys</a></li>
-			<li><a href="help">Help</a></li>
-			<li><a href="other">Other Stuff</a></li>
+			<li><a href="javascript:void(0)" class="current">Home</a></li>
+			<li><a href="buy">Buy</a></li>
+			<li><a href="info"Information</a></li>
+			<li><a href="support">Support</a></li>
+			<li><a href="contact">Contact</a></li>
 			<li class="dropdown">
-				<a href="javascript:void(0)">Version</a>
+				<a href="javascript:void(0)">More Games</a>
 				<div class="dropdown-content">
-					<a href="javascript:void(0)" class="current">1.2</a>
-					<a href="keyhunt-1.1">1.1</a>
-					<a href="keyhunt-af23">April Fools</a>
-					<a href="guide-2.0">2.0</a>
+					<a href="javascript:void(0)" class="current">PeepoQuest</a>
+					<a href="home.html">TLP</a>
+					<a href="home.html">Bit's Trip Run</a>
 				</div>
 			</li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
-			<h1>Scoutdigo Key Hunt Guide</h1>
-			<h2>Why?</h2>
-			<p>To put it simply: I got tired of repeating myself.</p>
+			<h1>PEEPOQUEST</h1>
+			<h3>The Fun Shape Adventure!</h3>
+			<p>Now released! Get it for your own and have fun!<br>
+			Contain the shapelings, and send them off!<br>
+			Play as lovable ball Peepo and his friends!<br>
+			6 Different Area of Fun for you to play!</p>
 			<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
 			<p>You will probably have issues, and that's okay!</p>
 			<p>Struggling is part of the learning process.</p>
