--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -17,7 +17,7 @@
 		<ul class="navBar">
 			<li><a href="javascript:void(0)" class="current">Home</a></li>
 			<li><a href="buy">Buy</a></li>
-			<li><a href="info"Information</a></li>
+			<li><a href="info">Information</a></li>
 			<li><a href="support">Support</a></li>
 			<li><a href="contact">Contact</a></li>
 			<li class="dropdown">
