--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -11,7 +11,7 @@
 	<meta content="mmm.. yom yummy! candy!" property="og:description" />
 	<meta content="https://loglogpeepo.github.io/peepoquest/home" property="og:url" />
 	<meta content="https://loglogpeepo.github.io/peepoquest/assets/SweetCandy.png" property="og:image" />
-	<meta content="#FF4444" data-react-helmet="true" name="theme-color" /
+	<meta content="#FF4444" data-react-helmet="true" name="theme-color" >
 
 	<body style="text-align: center;">
 		<ul class="navBar">
