--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="basic.css">
+		<link rel="stylesheet" href="sweet.css">
 		<title>PeepoQuest</title>
 		<link rel="icon" type="image/x-icon" href="assets/SweetCandy.png">
 	</head>
