--- a/peepoquest/buy.html
+++ b/peepoquest/buy.html
@@ -2,21 +2,21 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="sweet.css">
+		<link rel="stylesheet" href="sour.css">
 		<title>PeepoQuest</title>
-		<link rel="icon" type="image/x-icon" href="assets/SweetCandy.png">
+		<link rel="icon" type="image/x-icon" href="assets/SourLemon.png">
 	</head>
 
 	<meta content="Home" property="og:title" />
 	<meta content="mmm.. yom yummy! candy!" property="og:description" />
 	<meta content="https://loglogpeepo.github.io/peepoquest/home" property="og:url" />
-	<meta content="https://loglogpeepo.github.io/peepoquest/assets/SweetCandy.png" property="og:image" />
-	<meta content="#FF4444" data-react-helmet="true" name="theme-color" >
+	<meta content="https://loglogpeepo.github.io/peepoquest/assets/SourLemon.png" property="og:image" />
+	<meta content="#FFFF44" data-react-helmet="true" name="theme-color" >
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="javascript:void(0)" class="current">Home</a></li>
-			<li><a href="buy">Buy</a></li>
+			<li><a href="home" class="current">Home</a></li>
+			<li><a href="javascript:void(0)">Buy</a></li>
 			<li><a href="info">Information</a></li>
 			<li><a href="support">Support</a></li>
 			<li><a href="contact">Contact</a></li>
