fixed the damn th8ingogpejr09b08e2342

--- a/peepoquest/buy.html
+++ b/peepoquest/buy.html
@@ -15,8 +15,8 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="home" class="current">Home</a></li>
-			<li><a href="javascript:void(0)">Buy</a></li>
+			<li><a href="home" >Home</a></li>
+			<li><a href="javascript:void(0)" class="current">Buy</a></li>
 			<li><a href="info">Information</a></li>
 			<li><a href="support">Support</a></li>
 			<li><a href="contact">Contact</a></li>
