--- a/peepoquest/home.html
+++ b/peepoquest/home.html
@@ -29,6 +29,8 @@
 				</div>
 			</li>
 		</ul>
+
+		<div class="scrolling_bg"></div>
 		
 		<div style="padding:20px; margin-top:20px;">
 			<h1>PEEPOQUEST</h1>
