--- a/peepoquest/buy.html
+++ b/peepoquest/buy.html
@@ -33,19 +33,16 @@
 		<div class="scrolling_bg"></div>
 		
 		<div style="padding:20px; margin-top:20px;">
-			<h1>PEEPOQUEST</h1>
-			<h3>The Fun Shape Adventure!</h3>
-			<p>Now released! Get it for your own and have fun!</p>
-			<p>Contain the shapelings, and send them off!</p>
-			<p>Play as lovable ball Peepo and his friends!</p>
-			<p>6 Different Area of Fun for you to play!</p>
+			<h1>Buy the Game</h1>
+			<br>
+			<p>Where to buy!</p>
+			<p>Physical copies have been new released in select areas:</p>
+			<p>[i gotta do this part later, no metatext or anything this is fr]</p>
 
-			<h2>Get it now on the Nintendo Wii</h2>
-			<p>Each area has a fun flavor to explore!</p>
-			<p>Play it now!</p>
-
-			<h2>Having Trouble?</h2>
-			<p>You may want to check the <a href="support">support</a> page.</p>
-			<p>Common questions are answered!</p></div>
+			<h2>Game Information</h2>
+			<p>Published by LERG Studios in 2006</p>
+			<p>[insert an image of the box art, again no metatext]</p>
+			<p>[more images]</p>
+			<p>Get it yourself today!</p></div>
     </body>
 </html>
