oops forgot about the embed

--- a/peepoquest/buy.html
+++ b/peepoquest/buy.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<meta content="Home" property="og:title" />
-	<meta content="mmm.. yom yummy! candy!" property="og:description" />
-	<meta content="https://loglogpeepo.github.io/peepoquest/home" property="og:url" />
+	<meta content="lem enn e hg nh" property="og:description" />
+	<meta content="https://loglogpeepo.github.io/peepoquest/buy" property="og:url" />
 	<meta content="https://loglogpeepo.github.io/peepoquest/assets/SourLemon.png" property="og:image" />
 	<meta content="#FFFF44" data-react-helmet="true" name="theme-color" >
 
