generalized index for stupid thingy blehh

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <filetype HTML>
 	"header" :
 	"body" :
-		<pr>Real Website Of Siteweblei jmm,m <br>This is the website</pr>
+		<p>ur at the wrong place if you ended up here</p>
+  		<p>idk where ur supposed to be but it isnt here</p>
