--- a/user/0191521e-92b4-7f05-92e8-4628237cd39e/assignment/038-13-53/load.html
+++ b/user/0191521e-92b4-7f05-92e8-4628237cd39e/assignment/038-13-53/load.html
@@ -90,7 +90,15 @@
 
 <input type='text' id='foo'><div onclick='$("#foo").focus();'>click</div>
 	<canvas id="unity-canvas" width=960 height=540 style="width: 960px; height: 540px; background: #231F20"></canvas>
-    <script src="Debug/Console.js"></script>
+    <script>var realConsoleLog = console.log;
+console.log = function () {
+    var message = [].join.call(arguments, " ");
+    // Display the message somewhere... (jQuery example)
+    $(".output").text(message);
+    realConsoleLog.apply(console, arguments);
+};
+</script>
+<div id="console"></div>
     <script src="Build/MarioVsLuigi-WebGL.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
