--- a/user/0191521e-92b4-7f05-92e8-4628237cd39e/assignment/038-13-53/load.html
+++ b/user/0191521e-92b4-7f05-92e8-4628237cd39e/assignment/038-13-53/load.html
@@ -5,6 +5,17 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>"Learn@Log"</title>
+<style>
+			#console {
+				width: 800px;
+				height: 400px;
+				background: #575757;
+				color: white;
+				margin: 30px auto;
+				padding: 10px;
+				overflow: auto;
+			}
+</style>
 </head>
 <body style="text-align: center">
 <p>Error: login failed</p>
