--- a/ball/index.html
+++ b/ball/index.html
@@ -3,5 +3,5 @@
   <title>sports ball...</title>
 </head>
 <body>
-  <img src="20250322_030206.jpg">
+  <img src="20250322_030206.jpg" width="400" height="240">
 </body>
